@@ -244,9 +244,14 @@ New Features:
 
 - ``sendBreak()`` accepts a ``duration`` argument. Default duration increased.
 
+- miniterm.py has a new feature to send a file (upload) and configurable
+  special characters for exit and upload. Refactored internals to class based
+  structure (upload and class refactoring by Colin D Bennett)
+
 Bugfixes:
 
 - [Bug 1451535] TCP/serial redirect example "--help"
+- update VERSION variable
 
 Bugfixes (posix):
 
